@@ -1,24 +1,17 @@
 package uni.gaben.iscat.controller;
 
-import javafx.animation.Interpolator;
-import javafx.animation.KeyFrame;
-import javafx.animation.KeyValue;
-import javafx.animation.Timeline;
+import javafx.animation.ScaleTransition;
 import javafx.application.Platform;
-import javafx.beans.value.ChangeListener;
+import javafx.collections.ObservableList;
 import javafx.event.ActionEvent;
 import javafx.fxml.FXML;
-import javafx.scene.Node;
 import javafx.scene.control.Button;
 import javafx.scene.control.Label;
-import javafx.scene.layout.FlowPane;
-import javafx.scene.layout.Pane;
-import javafx.scene.layout.Region;
-import javafx.scene.layout.StackPane;
-import javafx.scene.layout.VBox;
+import javafx.scene.layout.*;
 import javafx.util.Duration;
 import uni.gaben.iscat.controller.components.InfoCardController;
 import uni.gaben.iscat.database.IscatDB;
+import uni.gaben.iscat.model.SkinGridModel;
 import uni.gaben.iscat.model.user.SessionUser;
 import uni.gaben.iscat.universe.entities.EntityFactory;
 import uni.gaben.iscat.universe.entities.EntityRecord;
@@ -26,36 +19,24 @@ import uni.gaben.iscat.utils.ComponentsUtils;
 import uni.gaben.iscat.utils.SessionManager;
 import uni.gaben.iscat.view.components.AnimatedCanvas;
 
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 public class SkinMenuController implements IscatMenuController {
 
-    @FXML private FlowPane skinFlow;
+    public static final double SKIN_TO_BUTTON_RATIO = 0.75; // Lowered slightly to ensure no padding clip
+    @FXML public VBox skinsVbox;
+    @FXML private GridPane skinGrid;
     @FXML private Label skinNameLabel;
     @FXML private StackPane skinStackPane;
-    @FXML private VBox previewBox;       // kept for fallback, not used in FXML
-
     @FXML private Button confirmBtn;
     @FXML private Button randomBtn;
     @FXML private Button cancelBtn;
-
     @FXML private InfoCardController infoCardController;
 
+    private final SkinGridModel gridModel = new SkinGridModel();
     private StackPane contentRoot;
     private String selectedSkinPath;
     private String selectedSkinKey = "player1";
-
-    private final List<AnimatedCanvas> buttonCanvases = new ArrayList<>();
-    private final List<EntityRecord> playerSkins = new ArrayList<>();
-
-    private static final double BASE_SIZE = 32.0;          // icon size
-    private static final double BASE_BUTTON_SIZE = 80.0;   // default button size
-    private static final double SELECTED_BUTTON_SIZE = BASE_BUTTON_SIZE * 4.0; // 320
-
-    private boolean isScaling = false;
-    private Button selectedButton;
 
     @FXML
     public void initialize() {
@@ -64,15 +45,155 @@ public class SkinMenuController implements IscatMenuController {
         ComponentsUtils.applyIconButton(cancelBtn,  "fas-arrow-left");
 
         loadSkinsFromJson();
-        populateFlow();
 
-        // Preselect current skin
+        gridModel.placementsProperty().addListener((obs, old, placements) -> rebuildGrid(placements));
+        gridModel.selectedKeyProperty().addListener((obs, oldKey, newKey) -> {
+            if (newKey != null && !newKey.equals(oldKey)) {
+                rebuildGrid(gridModel.getPlacements());
+                refreshInfoZone();
+            }
+        });
+
+        // Listen directly to window height to shrink/grow dynamically
+        skinStackPane.heightProperty().addListener((obs, old, newVal) -> rebuildGrid(gridModel.getPlacements()));
+        skinStackPane.widthProperty().addListener((obs, old, newVal) -> rebuildGrid(gridModel.getPlacements()));
+
+        // Run later to guarantee initial layout bounds are determined
+        Platform.runLater(() -> {
+            preselectSkin();
+            rebuildGrid(gridModel.getPlacements());
+        });
+
+        registerEscHandler();
+    }
+
+    private void loadSkinsFromJson() {
+        List<EntityRecord> skins = new ArrayList<>();
+        Map<String, EntityRecord> globalCache = EntityFactory.getCache();
+        for (Map.Entry<String, EntityRecord> entry : globalCache.entrySet()) {
+            EntityRecord record = entry.getValue();
+            String key = entry.getKey().toLowerCase().trim();
+            if (record.player() != null || key.contains("player")) {
+                skins.add(record);
+            }
+        }
+        gridModel.getSkins().setAll(skins);
+        gridModel.setColumns(4);
+    }
+
+    private void rebuildGrid(ObservableList<SkinGridModel.SkinPlacement> placements) {
+        skinGrid.getChildren().clear();
+        skinGrid.getColumnConstraints().clear();
+        skinGrid.getRowConstraints().clear();
+
+        if (placements.isEmpty()) return;
+
+        int maxRow = 0, maxCol = 0;
+        for (SkinGridModel.SkinPlacement p : placements) {
+            int endRow = p.row + p.rowSpan;
+            int endCol = p.col + p.colSpan;
+            if (endRow > maxRow) maxRow = endRow;
+            if (endCol > maxCol) maxCol = endCol;
+        }
+
+        // Calculate maximum vertical clearance space avoiding overflow
+        double squareCellSize = getSquareCellSize(maxRow);
+
+        // Apply matching constraints to enforce square grids
+        for (int r = 0; r < maxRow; r++) {
+            RowConstraints row = new RowConstraints();
+            row.setPrefHeight(squareCellSize);
+            row.setMinHeight(squareCellSize);
+            row.setMaxHeight(squareCellSize);
+            row.setFillHeight(true);
+            skinGrid.getRowConstraints().add(row);
+        }
+
+        for (int c = 0; c < maxCol; c++) {
+            ColumnConstraints col = new ColumnConstraints();
+            col.setPrefWidth(squareCellSize);
+            col.setMinWidth(squareCellSize);
+            col.setMaxWidth(squareCellSize);
+            col.setFillWidth(true);
+            skinGrid.getColumnConstraints().add(col);
+        }
+
+        for (SkinGridModel.SkinPlacement p : placements) {
+            double currentCellW = squareCellSize * p.colSpan;
+            double currentCellH = squareCellSize * p.rowSpan;
+
+            Button btn = createSkinButton(p.record, currentCellW, currentCellH);
+
+            skinGrid.add(btn, p.col, p.row, p.colSpan, p.rowSpan);
+            GridPane.setHgrow(btn, Priority.ALWAYS);
+            GridPane.setVgrow(btn, Priority.ALWAYS);
+
+            if (p.selected) {
+                btn.getStyleClass().add("selected-skin-button");
+                ScaleTransition pop = new ScaleTransition(Duration.millis(180), btn);
+                pop.setToX(1.02);
+                pop.setToY(1.02);
+                pop.play();
+            }
+        }
+    }
+
+    private double getSquareCellSize(int maxRow) {
+        return skinGrid.getHeight() / maxRow;
+    }
+
+    private Button createSkinButton(EntityRecord skin, double width, double height) {
+        String key = skin.entityKey();
+        String path = skin.spritePath();
+
+        double baseSize = Math.min(width, height);
+        AnimatedCanvas canvas = new AnimatedCanvas(baseSize);
+        canvas.loadSkin(path, skin.frameW(), skin.frameH());
+
+        Button btn = new Button();
+        btn.getStyleClass().add("skin-button");
+        btn.setGraphic(canvas);
+        btn.setFocusTraversable(false);
+        btn.setUserData(key);
+
+        // Force rigorous layout boundaries
+        btn.setMinSize(width, height);
+        btn.setPrefSize(width, height);
+        btn.setMaxSize(width, height);
+
+        btn.widthProperty().addListener((obs, old, newVal) -> {
+            double size = Math.min(newVal.doubleValue(), btn.getHeight());
+            canvas.resize(size * SKIN_TO_BUTTON_RATIO);
+        });
+        btn.heightProperty().addListener((obs, old, newVal) -> {
+            double size = Math.min(btn.getWidth(), newVal.doubleValue());
+            canvas.resize(size * SKIN_TO_BUTTON_RATIO);
+        });
+
+        canvas.resize(baseSize * SKIN_TO_BUTTON_RATIO);
+        btn.setOnAction(e -> selectSkin(key, skin.spritePath(), skin.name()));
+
+        return btn;
+    }
+
+    private void selectSkin(String key, String path, String name) {
+        this.selectedSkinKey = key;
+        this.selectedSkinPath = path;
+        if (skinNameLabel != null) {
+            skinNameLabel.setText(name.toUpperCase());
+        }
+        gridModel.setSelectedKey(key);
+        refreshInfoZone();
+        ComponentsUtils.playSpawnTween(skinGrid);
+    }
+
+    private void preselectSkin() {
         String currentKey = SessionManager.getPlayerSkinKey();
         EntityRecord current = EntityFactory.getCache().get(currentKey);
         if (current != null) {
             selectSkin(current.entityKey(), current.spritePath(), current.name());
-        } else if (!playerSkins.isEmpty()) {
-            EntityRecord first = playerSkins.get(0);
+        } else if (!gridModel.getSkins().isEmpty()) {
+            EntityRecord first = gridModel.getSkins().getFirst();
             selectSkin(first.entityKey(), first.spritePath(), first.name());
         } else {
             this.selectedSkinKey = "player1";
@@ -80,139 +201,18 @@ public class SkinMenuController implements IscatMenuController {
             if (skinNameLabel != null) skinNameLabel.setText("BATTLE SHIP");
             refreshInfoZone();
         }
-
-        ChangeListener<Number> sizeListener = (obs, oldVal, newVal) -> updateDynamicScaling();
-        skinStackPane.widthProperty().addListener(sizeListener);
-        skinStackPane.heightProperty().addListener(sizeListener);
-
-        Platform.runLater(this::updateDynamicScaling);
-        registerEscHandler();
-    }
-
-    private void loadSkinsFromJson() {
-        playerSkins.clear();
-        Map<String, EntityRecord> globalCache = EntityFactory.getCache();
-        for (Map.Entry<String, EntityRecord> entry : globalCache.entrySet()) {
-            EntityRecord record = entry.getValue();
-            String key = entry.getKey().toLowerCase().trim();
-            if (record.player() != null || key.contains("player")) {
-                playerSkins.add(record);
-            }
-        }
-    }
-
-    private void updateDynamicScaling() {
-        // This method can be left empty; it's kept for compatibility.
-        // Sizes are fixed and animated via the selection mechanism.
-    }
-
-    private void populateFlow() {
-        skinFlow.getChildren().clear();
-        buttonCanvases.clear();
-
-        for (EntityRecord skin : playerSkins) {
-            String key  = skin.entityKey();
-            String path = skin.spritePath();
-            String name = skin.name();
-
-            AnimatedCanvas canvas = new AnimatedCanvas(BASE_SIZE);
-            canvas.loadSkin(path, skin.frameW(), skin.frameH());
-            buttonCanvases.add(canvas);
-
-            Button btn = new Button();
-            btn.getStyleClass().add("skin-button");
-            btn.setGraphic(canvas);
-            btn.setFocusTraversable(false);
-            btn.setMinSize(BASE_BUTTON_SIZE, BASE_BUTTON_SIZE);
-            btn.setPrefSize(BASE_BUTTON_SIZE, BASE_BUTTON_SIZE);
-            btn.setMaxSize(BASE_BUTTON_SIZE, BASE_BUTTON_SIZE);
-            btn.setUserData(key);
-            btn.setOnAction(e -> selectSkin(key, path, name));
-
-            skinFlow.getChildren().add(btn);
-        }
-    }
-
-    private void selectSkin(String key, String path, String name) {
-        this.selectedSkinKey  = key;
-        this.selectedSkinPath = path;
-        if (skinNameLabel != null) skinNameLabel.setText(name.toUpperCase());
-
-        refreshInfoZone();
-        updateSelection(key);
-        ComponentsUtils.playSpawnTween(skinFlow);
-    }
-
-    private void updateSelection(String selectedKey) {
-        // Reset previous selection
-        if (selectedButton != null) {
-            animateButtonSize(selectedButton, BASE_BUTTON_SIZE);
-            if (selectedButton.getGraphic() instanceof AnimatedCanvas canvas) {
-                canvas.resize(BASE_SIZE);
-            }
-            selectedButton.getStyleClass().remove("selected-skin-button");
-        }
-
-        // Find and enlarge the new button
-        for (Node node : skinFlow.getChildren()) {
-            if (node instanceof Button btn && selectedKey.equals(btn.getUserData())) {
-                selectedButton = btn;
-                animateButtonSize(btn, SELECTED_BUTTON_SIZE);
-                if (btn.getGraphic() instanceof AnimatedCanvas canvas) {
-                    canvas.resize(BASE_SIZE * 4);
-                }
-                btn.getStyleClass().add("selected-skin-button");
-                break;
-            }
-        }
-    }
-
-    private void animateButtonSize(Button btn, double targetSize) {
-        // Allow the button to grow beyond its current constraints
-        btn.setMinSize(Region.USE_COMPUTED_SIZE, Region.USE_COMPUTED_SIZE);
-        btn.setMaxSize(Double.MAX_VALUE, Double.MAX_VALUE);
-
-        double startW = btn.getPrefWidth();
-        double startH = btn.getPrefHeight();
-        if (startW <= 0) startW = BASE_BUTTON_SIZE;
-        if (startH <= 0) startH = BASE_BUTTON_SIZE;
-
-        final double fromW = startW;
-        final double fromH = startH;
-        final double toW = targetSize;
-        final double toH = targetSize;
-
-        Timeline timeline = new Timeline(
-                new KeyFrame(Duration.ZERO,
-                        new KeyValue(btn.prefWidthProperty(), fromW),
-                        new KeyValue(btn.prefHeightProperty(), fromH)
-                ),
-                new KeyFrame(Duration.millis(300),
-                        new KeyValue(btn.prefWidthProperty(), toW, Interpolator.EASE_OUT),
-                        new KeyValue(btn.prefHeightProperty(), toH, Interpolator.EASE_OUT)
-                )
-        );
-        timeline.setOnFinished(e -> {
-            // Lock the final size to avoid layout shifts after animation
-            btn.setPrefWidth(toW);
-            btn.setPrefHeight(toH);
-            btn.setMinSize(targetSize, targetSize);
-            btn.setMaxSize(targetSize, targetSize);
-            // Force FlowPane to reflow
-            skinFlow.requestLayout();
-        });
-        timeline.play();
     }
 
     @FXML
     private void selectRandom() {
-        if (playerSkins.isEmpty()) return;
+        List<EntityRecord> skins = gridModel.getSkins();
+        if (skins.isEmpty()) return;
         int idx;
         EntityRecord randomSkin;
         do {
-            idx = java.util.concurrent.ThreadLocalRandom.current().nextInt(playerSkins.size());
-            randomSkin = playerSkins.get(idx);
-        } while (randomSkin.spritePath().equals(selectedSkinPath) && playerSkins.size() > 1);
+            idx = java.util.concurrent.ThreadLocalRandom.current().nextInt(skins.size());
+            randomSkin = skins.get(idx);
+        } while (randomSkin.spritePath().equals(selectedSkinPath) && skins.size() > 1);
         selectSkin(randomSkin.entityKey(), randomSkin.spritePath(), randomSkin.name());
     }
 
@@ -226,11 +226,17 @@ public class SkinMenuController implements IscatMenuController {
         }
     }
 
-    @Override
-    public Pane getRootPane() { return skinStackPane; }
-
-    @FXML
-    private void handleBack(ActionEvent event) { handleBack(); }
+    public void registerEscHandler() {
+        skinStackPane.sceneProperty().addListener((obs, oldScene, newScene) -> {
+            if (newScene != null) {
+                newScene.setOnKeyPressed(event -> {
+                    if (event.getCode() == javafx.scene.input.KeyCode.ESCAPE) {
+                        handleBack();
+                    }
+                });
+            }
+        });
+    }
 
     @FXML
     private void handleConfirm(ActionEvent event) {
@@ -249,6 +255,7 @@ public class SkinMenuController implements IscatMenuController {
         handleBack();
     }
 
-    @Override
-    public void setContentRoot(StackPane contentRoot) { this.contentRoot = contentRoot; }
+    @FXML private void handleBack(ActionEvent event) { handleBack(); }
+    @Override public Pane getRootPane() { return skinStackPane; }
+    @Override public void setContentRoot(StackPane contentRoot) { this.contentRoot = contentRoot; }
 }
